--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -10,6 +10,8 @@ set(CMAKE_CXX_STANDARD 17)
 # CMAKE_CURRENT_SOURCE_DIR は app/src/main/cpp/ を指す
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/)
 
+add_compile_options(-fexceptions)
+
 add_library(
         native-lib
         SHARED
